# goddess_daq

./: .codedocs  .gitignore  2d_fun.c  CMakeLists.txt  GSII_angles.h  GSMAP.h  GTMerge_readnew.h  GTPrint.c  GTUtils.c  Makefile  README.md  UserDeclare.h  UserEv.h  UserGoodEv.h  UserInclude.h  UserStat.h  dgsHeader.c  efftape.h  fsplit.c  gsII.h  listTS.c  time_stamp.c  zunzip.c
chatfiles/: GEBMerge.chat  GEBSort.chat
cmake/modules/: DealWithUserStuffs.cmake  ExportDYLD.cmake  FindROOT.cmake
doc/: doxygen.config
exec/: goddess_95Mo_runs200_to_352_with_jumpcal.config
goddess/include/: BB10.h  Detector.h  GStructSupportLinkDef.h  GoddessConfig.h  GoddessData.h  GoddessLinkDef.h  GoddessStruct.h  IonChamber.h  LiquidScint.h  ORRUBA.h  ORRUBALinkDef.h  PNPair.h  QQQ5.h  SiDetEnStripInfo.h  SolidVector.h  orrubaDet.h  siDet.h  superX3.h
goddess/source/: BB10.cxx  CMakeLists.txt  Detector.cxx  GoddessConfig.cxx  GoddessData.cxx  GoddessStruct.cxx  IonChamber.cxx  LiquidScint.cxx  ORRUBA.cxx  QQQ5.cxx  SiDetEnStripInfo.cxx  SolidVector.cxx  orrubaDet.cxx  siDet.cxx  superX3.cxx
hribf/: CMakeLists.txt
hribf/include/: hribfBuffer.h  mainBuffer.h
hribf/source/: CMakeLists.txt  hribfBuffer.cxx  ldfConvert.cxx  mainBuffer.cxx
include/: BB10.h  DFMAProcessor.h  DGSProcessor.h  DGSSort.h  Detector.h  GEBFilter.h  GEBSort.h  GEBSort_old.h  GODProcessor.h  GRProcessor.h  GTMerge.h  GoddessConfig.h  GoddessData.h  GretProcessor.h  IonChamber.h  MergeManager.h  ORRUBA.h  ORRUBALinkDef.h  PMLinkDefs.h  ProcessManagers.h  QQQ5.h  SortManager.h  UserChat.h  UserDeclare.h  UserEv.h  UserEvVER.h  UserExit.h  UserInclude.h  UserInit.h  UserPreCond.h  UserRawEv.h  ag2mode2.h  ctk.h  functions_dfma.h  gdecomp.h  gsang.h  orrubaDet.h  siDet.h  superX3.h  veto_pos.h
scripts/: AnalysisDraw.cxx  CMakeLists.txt  CalibResistiveStrips.cxx  GoddessAnalysis.cxx  GoddessCalib.cxx  MakeEventLists.cxx  PrintPlots.C  UserAnalysisMacros.cxx  UserAnalysisMacrosTemplate.cxx  UserEventFilter.cxx  UserEventFilterTemplate.cxx  calibstrips.cxx  copyRun.sh  gebmerge.sh  gebsort.sh  gebsort_old.sh  goddess_analysis_macro.cxx  goddess_analysis_macros.h
scripts/include/: GoddessAnalysis.h  GoddessAnalysisClassesLinkDef.h  GoddessCalib.h  goddess_analysis_macros.h
share/: .rootlogon.C  135Xe_cross_sections.txt  95Mo_stopping_power_1063mg_vs_760Mev.txt  EnShift_vs_Pos_2_May_2017.root  GEBSort.chat  QQQ5_internal_calib_template.txt  SX3_En_vs_Pos_graphs.root  dgscal.dat.350  goddess.config  goddess.geom  goddess.reacinfo  goddess_134Xe_alex_r136.config  goddess_134Xe_nothresholds.config  goddess_134Xe_runs119_to_146.config  goddess_134Xe_runs41_to_146.config  goddess_134Xe_runs41_to_54.config  goddess_134Xe_runs52_to_146.config  goddess_134Xe_runs52_to_146_new.config  goddess_134Xe_runs52_to_146_nothresholds.config  goddess_134Xe_runs55_to_61.config  goddess_134Xe_runs62_to_74.config  goddess_134Xe_runs75_to_83.config  goddess_134Xe_runs84_to_85.config  goddess_134Xe_runs86_to_86.config  goddess_134Xe_runs87_to_87.config  goddess_134Xe_runs88_to_89.config  goddess_134Xe_runs90_to_90.config  goddess_95Mo_runs200_to_352.config  goddess_95Mo_runs200_to_352_new.config  goddess_test.geom
share/ranges_tables/: 134Xe_in_C2D4_1063mg_cm3.txt  95Mo_in_C2D4_1063mg_cm3.txt  README.txt  p_in_C2D4_1036mg_cm3.txt
source/: .CMakeLists.txt.swp  .DFMAProcessor.cxx.kate-swp  .DGSSort.cxx.swp  .GTMerge3.c.swp  .time_stamp.c.swp  2d_fun.c  BB10.cxx  CMakeLists.txt  DFMAProcessor.cxx  DGSProcessor.cxx  DGSSort.cxx  Detector.cxx  GEBFilter.c  GEBMerge.c  GEBMerge.cxx  GEBSort.cxx  GEBSort_old.cxx  GF_veto_cube.c  GODProcessor.cxx  GRProcessor.cxx  GTMerge.c  GTMerge3.c  GTPrint.c  GoddessConfig.cxx  GoddessData.cxx  GretProcessor.cxx  IonChamber.cxx  MergeManager.cxx  ORRUBA.cxx  ProcessManagers.cxx  QQQ5.cxx  SolidVector.cxx  SortManager.cxx  ag2mode2.c  bin_agod.c  bin_dfma.c  bin_dgod.c  bin_dgs.c  bin_god.c  bin_gtcal.c  (+15 more)
toolbox/include/: GoddessAnalysis.h  GoddessAnalysisClassesLinkDef.h  GoddessCalib.h  GoddessGeomUtils.h  GoddessToolbox.h  HG_Goddess_Analysis.h  SX3Calibration.h  Sort_TimeDif.h
toolbox/scripts/: .kdev_include_paths  goddess_geom_render.cxx  temp
toolbox/source/: BackgroundSup.C  CMakeLists.txt  CalibrationCheck.C  CompareGammasphere.cxx  GoddessAnalysis.cxx  GoddessCalib.cxx  GoddessCalibGUI.cxx  GoddessGeomUtils.cxx  GoddessToolbox.cxx  Gretina_Garland_Unfinished  Gretina_original_angles.csv  HGBinaryStuff.cxx  HG_Goddess_Analysis.cxx  Heather_ST.cxx  HeathersGeomStuff.cxx  New_Gwen.C  ORRUBABacksides.cxx  Read_GetTTrees.C  SX3Calibration.cxx  Sort_TimeDif.cxx  monte_carlo_solid_angle.cxx  sighandler
